--- a/config/label/surface.yaml
+++ b/config/label/surface.yaml
@@ -11,3 +11,11 @@
 - sky
 - road_paint_lane_solid_white
 - road_paint_lane_dash_white
+- snow
+- road_paint_arrow
+- road_paint_restricted_area
+- road_paint_lane_deceleration
+- road_paint_character
+- road_paint_lane_stop_line
+- road_paint_crosswalk
+- road_paint_lane_dash_yellow
